--- a/control.html
+++ b/control.html
@@ -87,7 +87,7 @@
         firebase.initializeApp(firebaseConfig);
         const db = firebase.database();
 
-        const teams = ["DUDU Thootha", "DNAC Koonanchery", "NIHA Pattambi", "SHIA Kuttikkatoor", "MDIA Thalankara", "SHIC Parappur", "DIIA Pandikkad", "AHIA Kalamassery"];
+        const teams = ["DUDC Thootha", "DNAC Koonanchery", "NIHA Pattambi", "SHIA Kuttikkatoor", "MDIA Thalankara", "SHIC Parappur", "DIIA Pandikkad", "AHIA Kalamassery"];
         const container = document.getElementById('teamsContainer');
 
         teams.forEach(team => {
