--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     header h1 {
       font-size: 2.2rem;
       color: var(--primary);
-      font-weight: 600;
+      font-weight: bold;
       margin: 0;
     }
 
@@ -160,7 +160,7 @@
 <body>
   <header>
     <h3 style="margin-bottom: 0px;">QAF - Quran Art Fest</h3>
-    <h1>Quran Talent - Score Board</h1>
+    <h1>فاستبقوا الخيرات - Score Board</h1>
   </header>
 
   <section class="teams" id="teamsContainer"></section>
@@ -185,7 +185,7 @@
     const db = firebase.database();
 
     const teams = [
-      "DUDU Thootha", "DNAC Koonanchery", "NIHA Pattambi",
+      "DUDC Thootha", "DNAC Koonanchery", "NIHA Pattambi",
       "SHIA Kuttikkatoor", "MDIA Thalankara", "SHIC Parappur",
       "DIIA Pandikkad", "AHIA Kalamassery"
     ];
