--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     const db = firebase.database();
 
     const teams = [
-      "DUDC Thootha", "DNAC Koonanchery", "NIHA Pattambi",
+      "DUDC Thootha", "DNAC Koonanchery", "NHIC Pattambi",
       "SHIA Kuttikkatoor", "MDIA Thalankara", "SHIC Parappur",
       "DIIA Pandikkad", "AHIA Kalamassery"
     ];
